--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,3 @@
-<!--
-  _   _  ___  ____  ___ ________  _   _     _   _ ___   
- | | | |/ _ \|  _ \|_ _|__  / _ \| \ | |   | | | |_ _| 
- | |_| | | | | |_) || |  / / | | |  \| |   | | | || | 
- |  _  | |_| |  _ < | | / /| |_| | |\  |   | |_| || |
- |_| |_|\___/|_| \_\___/____\___/|_| \_|    \___/|___|
-                                                                                                                                                                                                                                                                                                                                       
-=========================================================
-* Horizon UI Tailwind React - v1.0.0
-=========================================================
-
-* Product Page: https://www.horizon-ui.com/
-* Copyright 2023 Horizon UI (https://www.horizon-ui.com/)
-
-* Designed and Coded by Simmmple
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,17 +11,10 @@
       content="Web site created using create-react-app"
   /> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/> 
-    <title>Horizon UI - Tailwind React</title>
+    <title>Taskify - Task Planner</title>
   </head>
   <body class="font-dm bg-lightPrimary" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div> 
   </body>
 </html>
-
- <!--
-              ___
-          .__(  .)< 
-           \_____)
-       ~~~~~~~~~~~~~~~~    
--->
